--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   
 </head>
 <body>
-  <div class="card">
+  <main class="card">
     <div>
       <img src="./images/image-qr-code.png" alt="qr-code">
     </div>
-    <p>Improve your front-end skills by building projects</p>
+    <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
 
 </body>
 </html>
