--- a/index.html
+++ b/index.html
@@ -2,23 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="./style.css" rel="stylesheet">
-  
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | QR code component</title>
-
-  
 </head>
 <body>
-  <main class="card">
+  <article>
+    <img src="./images/image-qr-code.png" alt="qr code" />
     <div>
-      <img src="./images/image-qr-code.png" alt="qr-code">
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-    <h1>Improve your front-end skills by building projects</h1>
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </main>
-
+  </article>
 </body>
 </html>
